# pr-1-oshkinis

./: .gitignore  Makefile  pyproject.toml
VD_games/: __init__.py  cli.py
VD_games/games/: __init__.py  calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
VD_games/lib/: prompt.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_prime.py  VD_progression.py
