[project]
name = "VD_games"
version = "0.1.0"
description = "Brain Games collection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt"
]

[project.scripts]
VD_games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
